--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - G.R.O.O.T</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Drag--Drop-Upload-Form.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/fontawesome5-overrides.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Drag--Drop-Upload-Form.css') }}">
 </head>
 
 <body id="page-top" style="border-color: var(--danger);">
@@ -29,7 +29,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;assets/img/4362%20[Converti].svg&quot;) repeat, linear-gradient(145deg, #479f02 0%, #a96946 100%);height: 100%;background-size: auto, auto;">
+    <header class="masthead" style="background: url('{{ url_for('static', filename='img/bg-plants.svg') }}') repeat, linear-gradient(145deg, #479f02 0%, #a96946 100%);height: 100%;background-size: auto, auto;">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-7 my-auto">
@@ -40,8 +40,8 @@
                 <div class="col-lg-5 my-auto">
                     <div class="device-container">
                         <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device" style="background-image:url('assets/img/iphone_6_plus_white_port.png');">
-                                <div class="screen"><img class="img-fluid" src="assets/img/groot.gif"></div>
+                            <div class="device" style="background-image:url('{{ url_for('static', filename='img/iphone_6_plus_white_port.png') }}');">
+                                <div class="screen"><img class="img-fluid" src="{{ url_for('static', filename='img/groot.gif') }}"></div>
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                 <div class="col-md-8 mx-auto">
                     <h2 class="section-heading">Reconnaissez vos plantes sans aucun effort</h2>
                     <p>Essayez notre outil de reconnaissance de plantes&nbsp;</p>
-                    <div class="badges"><a class="badge-link" href="#"><img src="assets/img/github-logo.png"></a></div>
+                    <div class="badges"><a class="badge-link" href="#"><img src="{{ url_for('static', filename='img/github-logo.png') }}"></a></div>
                 </div>
             </div>
         </div>
@@ -72,8 +72,8 @@
                 <div class="col-lg-4 my-auto">
                     <div class="device-container">
                         <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device" style="background-image:url('assets/img/iphone_6_plus_white_port.png');">
-                                <div class="screen"><img class="img-fluid" src="assets/img/groot.gif"></div>
+                            <div class="device" style="background-image: url('{{ url_for('static', filename='img/iphone_6_plus_white_port.png') }}');">
+                                <div class="screen"><img class="img-fluid" src="{{ url_for('static', filename='img/groot.gif') }}"></div>
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
             </div>
         </div>
     </section>
-    <section class="cta" style="background-image:url('assets/img/bg-cta.jpg');">
+    <section class="cta" style="background-image:url('{{ url_for('static', filename='img/bg-cta.jpg') }}');">
         <div class="cta-content">
             <div class="container">
                 <h2>N'attendez essayer la maintenant</h2><a class="btn btn-outline-warning btn-xl js-scroll-trigger" role="button" href="#contact">Commencez l'experience!</a>
@@ -151,7 +151,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/new-age.js"></script>
+    <script src="{{ url_for('static', filename='js/new-age.js') }}"></script>
 </body>
 
 </html>
