--- a/web/assets/css/Drag--Drop-Upload-Form.css
+++ b/web/assets/css/Drag--Drop-Upload-Form.css
@@ -1,17 +1,22 @@
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-input:focus, select:focus, textarea:focus, button:focus {
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
   outline: none;
 }
 
 .drop {
   width: 90%;
   height: 220px;
-  border: 3px dashed #DADFE3;
+  border: 3px dashed #fff;
   border-radius: 15px;
   overflow: hidden;
   text-align: center;
@@ -33,7 +38,7 @@ input:focus, select:focus, textarea:focus, button:focus {
 .drop .cont {
   width: 500px;
   height: 170px;
-  color: #8E99A5;
+  color: #fff;
   -webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
@@ -47,7 +52,7 @@ input:focus, select:focus, textarea:focus, button:focus {
 
 .drop .cont i {
   font-size: 40px;
-  color: #787e85;
+  color: #fff;
   position: relative;
 }
 
@@ -58,7 +63,7 @@ input:focus, select:focus, textarea:focus, button:focus {
 }
 
 .drop .cont .desc {
-  color: #787e85;
+  color: #fff;
   font-size: 18px;
 }
 
@@ -67,7 +72,7 @@ input:focus, select:focus, textarea:focus, button:focus {
   color: white;
   padding: 8px 16px;
   border-radius: 4px;
-  background: #00c993;
+  background: #479f02;
 }
 
 .drop input {
@@ -95,4 +100,3 @@ input:focus, select:focus, textarea:focus, button:focus {
 .dashed_upload {
   height: 200px;
 }
-
