--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -19,7 +19,7 @@
 
 <body id="page-top" style="border-color: var(--danger);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top" style="font-size: 35px;font-family: Alatsi, sans-serif;color: var(--warning);">G.R.O.O.T</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler float-right" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="/" style="font-size: 35px;font-family: Alatsi, sans-serif;color: var(--warning);">G.R.O.O.T</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler float-right" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#download">Essayez le maintenant</a></li>
@@ -34,7 +34,7 @@
             <div class="row h-100">
                 <div class="col-lg-7 my-auto">
                     <div class="mx-auto header-content">
-                        <h1 class="mb-5"><br><strong>Grande Reconnaissance d’Orchidées, d’Oseille et de Te-plan aka G.R.O.O.T&nbsp;</strong><br><br></h1><a class="btn btn-outline-warning btn-xl js-scroll-trigger" role="button" href="#download">Essayez la maintenant</a>
+                        <h1 class="mb-5"><br><strong>Grande Reconnaissance d’Orchidées, d’Oseille et de Te-plan aka G.R.O.O.T&nbsp;</strong><br><br></h1><a class="btn btn-outline-warning btn-xl js-scroll-trigger" role="button" href="/ia">Essayez la maintenant</a>
                     </div>
                 </div>
                 <div class="col-lg-5 my-auto">
