--- a/web/templates/ia.html
+++ b/web/templates/ia.html
@@ -33,119 +33,32 @@
         <div class="container h-100">
             <div class="row row-cols-1 h-100">
                 <div class="col my-auto">
-                    <div class="dashed_upload"><div class="wrapper">
-  <div class="drop">
-    <div class="cont">
-      <i class="fa fa-cloud-upload"></i>
-      <div class="tit">
-        GLissez & depossez
-      </div>
-      <div class="desc">
-        ou 
-      </div>
-      <div class="browse">
-        parcourir mes fichiers
-      </div>
-    </div>
-    <output id="list"></output><input id="files" multiple name="files[]" type="file" />
-  </div>
-</div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-    <script src="js/index.js"></script></div>
+                    <div class="dashed_upload">
+                        <div class="wrapper">
+                            <div class="drop">
+                                <div class="cont">
+                                <i class="fa fa-cloud-upload"></i>
+                                <div class="tit">
+                                    GLissez & deposez
+                                </div>
+                                <div class="desc">
+                                    ou 
+                                </div>
+                                <div class="browse">
+                                    parcourir mes fichiers
+                                </div>
+                                </div>
+                                <output id="list"></output><input id="files" multiple name="files[]" type="file" />
+                            </div>
+                        </div>
+                        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+                        <script src="js/index.js"></script>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
-    <section id="download" class="download text-center bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 mx-auto">
-                    <h2 class="section-heading">Reconnaissez vos plantes sans aucun effort</h2>
-                    <p>Essayez notre outil de reconnaissance de plantes&nbsp;</p>
-                    <div class="badges"><a class="badge-link" href="#"><img src="assets/img/github-logo.png"></a></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="features" class="features">
-        <div class="container">
-            <div class="section-heading text-center">
-                <h2>Un outil performant</h2>
-                <p class="text-muted">Entrainé&nbsp;sur plusieurs milliers de photo<br></p>
-                <hr>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 my-auto">
-                    <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device" style="background-image:url('assets/img/iphone_6_plus_white_port.png');">
-                                <div class="screen"><img class="img-fluid" src="assets/img/groot.gif"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-8 my-auto">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="feature-item"><i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Multi-plateformes</h3>
-                                    <p class="text-muted">Prenez votre photo directement depuis votre Smartphone<br></p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item"><i class="icon-cloud-upload text-primary"></i>
-                                    <h3>Facilité d'utilisation</h3>
-                                    <p class="text-muted">Uploadez votre image sur notre magnifique fantasmagorique site</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item"><i class="icon-present text-primary"></i>
-                                    <h3>Usage Gratuit</h3>
-                                    <p class="text-muted">Outil disponible 100% gratuitement et cela&nbsp;à vie*</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item"><i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Le projet est entièrement open source et disponible sur github</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <p class="text-muted" style="font-size: 11px;margin-left: 80%;">*durant la durée du printemps des sciences</p>
-            </div>
-        </div>
-    </section>
-    <section class="cta" style="background-image:url('assets/img/bg-cta.jpg');">
-        <div class="cta-content">
-            <div class="container">
-                <h2>N'attendez essayer la maintenant</h2><a class="btn btn-outline-warning btn-xl js-scroll-trigger" role="button" href="#contact">Commencez l'experience!</a>
-            </div>
-        </div>
-        <div class="overlay"></div>
-    </section>
-    <section id="contact" class="contact bg-primary">
-        <div class="container">
-            <h2><span>We&nbsp;</span><i class="fa fa-heart"></i><span>&nbsp;new plants!</span></h2>
-            <ul class="list-inline list-social">
-                <li class="list-inline-item social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li class="list-inline-item social-twitter"><a href="#" style="background: rgb(54,54,54);"><i class="fa fa-github"></i></a></li>
-                <li class="list-inline-item social-twitter"><a href="#" style="background: rgb(114,137,217);"><i class="fab fa-discord"></i></a></li>
-            </ul>
-            <h2 style="margin-top: 5%;"><span>Made by</span></h2>
-            <ul class="list-inline list-social">
-                <li class="list-inline-item"><a href="https://github.com/Minigrim0" style="background-image:url(https://www.gravatar.com/avatar/7386f631d26a9fde6ec1571f899f2465?s=100);width: 100px;height: 100px;"></a></li>
-                <li class="list-inline-item"><a href="https://github.com/Mortinat" style="background-image:url(https://www.gravatar.com/avatar/18a27f3ba520c4fdb0a1f4b0bac4f846?s=100);width: 100px;height: 100px;"></a></li>
-                <li class="list-inline-item"><a href="https://github.com/Mortinat" style="background-image:url(https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100);width: 100px;height: 100px;"></a></li>
-                <li class="list-inline-item"><a href="https://github.com/Mortinat" style="background-image:url(https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100);width: 100px;height: 100px;"></a></li>
-                <li class="list-inline-item"><a href="https://github.com/Mortinat" style="background-image:url(https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100);width: 100px;height: 100px;"></a></li>
-            </ul>
-        </div>
-    </section>
-    <footer>
+    <footer class="fixed-bottom">
         <div class="container">
             <p>©&nbsp;G.R.O.O.T 2021. All Rights Reserved.</p>
             <ul class="list-inline">
@@ -158,7 +71,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/new-age.js"></script>
+    <script src="{{ url_for('static', filename="js/new-age.js") }}"></script>
 </body>
 
 </html>
