--- a/web/templates/ia.html
+++ b/web/templates/ia.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Drag--Drop-Upload-Form.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="fonts/fontawesome5-overrides.min.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/Drag--Drop-Upload-Form.css") }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/giphy.gif') }}">
 </head>
 
 <body id="page-top" style="border-color: var(--danger);">
@@ -29,30 +30,39 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url('{{ url_for('static', filename='img/bg-plants.svg') }}') repeat, linear-gradient(145deg, #479f02 0%, #a96946 100%);height: 100%;background-size: auto, auto;">
+    <header class="masthead" style="background: url('{{ url_for('static', filename="img/bg-plants.svg") }}') repeat, linear-gradient(145deg, #479f02 0%, #a96946 100%);height: 100%;background-size: auto, auto;">
         <div class="container h-100">
             <div class="row row-cols-1 h-100">
                 <div class="col my-auto">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            <div class="container text-center m-1">
+                                {% for category, message in messages %}
+                                    <h3 class="text-danger text-uppercase font-weight-bold">{{ message }}</h3>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    {% endwith %}
                     <div class="dashed_upload">
                         <div class="wrapper">
                             <div class="drop">
                                 <div class="cont">
                                 <i class="fa fa-cloud-upload"></i>
                                 <div class="tit">
-                                    GLissez & deposez
+                                    Glissez & deposez
                                 </div>
                                 <div class="desc">
-                                    ou 
+                                    ou
                                 </div>
                                 <div class="browse">
                                     parcourir mes fichiers
                                 </div>
                                 </div>
-                                <output id="list"></output><input id="files" multiple name="files[]" type="file" />
+                                <form id="plantForm" action="" method="POST" enctype="multipart/form-data">
+                                    <input onchange="$('#plantForm').submit()" id="files" multiple name="file" type="file" />
+                                </form>
                             </div>
                         </div>
-                        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-                        <script src="js/index.js"></script>
                     </div>
                 </div>
             </div>
