--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/fontawesome5-overrides.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Drag--Drop-Upload-Form.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/giphy.gif') }}">
 </head>
 
 <body id="page-top" style="border-color: var(--danger);">
