--- a/web/templates/waiting-screen.html
+++ b/web/templates/waiting-screen.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - G.R.O.O.T</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename="bootstrap/css/bootstrap.min.css") }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Drag--Drop-Upload-Form.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename="fonts/fontawesome5-overrides.min.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/Drag--Drop-Upload-Form.css") }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/giphy.gif') }}">
 </head>
 
 <body id="page-top" style="border-color: var(--danger);">
@@ -29,12 +30,15 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;assets/img/4362%20[Converti].svg&quot;) repeat, linear-gradient(145deg, #479f02 0%, #a96946 100%);height: 100%;background-size: auto, auto;">
+    <header class="masthead" style="background: url(&quot;{{ url_for('static', filename="img/bg-plants.svg") }}&quot;) repeat, linear-gradient(145deg, #479f02 0%, #a96946 100%);background-size: auto, auto;">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col d-flex justify-content-center align-self-center flex-wrap">
                     <h1 class="text-center" style="font-size: 80px;width: 100%;">Veuillez patienter</h1>
-                    <p class="text-center" style="font-size: 25px;width: 100%;">Vous etes 35 /40 dans la file</p><img src="assets/img/giphy.gif" style="width: 350px;">
+                    <p class="text-center" style="font-size: 25px;width: 100%;">Vous etes 35/40 dans la file</p>
+                    <img src="{{ url_for('static', filename="img/giphy.gif") }}" style="width: 350px;" /><br/>
+                    <p class="text-center" style="font-size: 25px;width: 100%">Votre image</p><br/>
+                    <img style="max-width: 350px" src="{{ url_for('display_image', filename=filename) }}" alt="votre image"/>
                 </div>
             </div>
         </div>
@@ -42,7 +46,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/new-age.js"></script>
+    <script src="{{ url_for('static', filename="js/new-age.js") }}"></script>
 </body>
 
 </html>
