[Upd] add twitter link + fix gravatar

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -257,7 +257,9 @@
         </h2>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://twitter.com/GrootGrootIA"
+              ><i class="fa fa-twitter"></i
+            ></a>
           </li>
           <li class="list-inline-item social-twitter">
             <a href="#" style="background: rgb(54, 54, 54)"
@@ -313,10 +315,14 @@
             ></a>
           </li>
           <li class="list-inline-item">
-            <img
-              class="rounded-circle"
-              src="https://www.gravatar.com/avatar/3aa8e6baab25f22c74a3720e3f828655?s=100"
-            />
+            <a
+              href="#"
+              style="
+                background-image: url(https://www.gravatar.com/avatar/3aa8e6baab25f22c74a3720e3f828655?s=100);
+                width: 100px;
+                height: 100px;
+              "
+            ></a>
           </li>
         </ul>
       </div>
