--- a/web/templates/waiting-screen.html
+++ b/web/templates/waiting-screen.html
@@ -34,12 +34,16 @@
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col d-flex justify-content-center align-self-center flex-wrap">
-                    <h1 class="text-center" style="font-size: 80px;width: 100%;" id="title">Veuillez patienter</h1>
-                    <p id="queue_position" class="text-center" style="font-size: 25px;width: 100%;">
-                        Vous etes <span id="position">{{position}}</span>/<span id="total_jobs">{{nb_jobs}}</span> dans la file
+                    <h1 class="text-center" style="font-size: 80px;width: 100%;" id="title">{% if context.job_done %}Votre résultat est disponible !{% else %}Veuillez patienter{% endif %}</h1>
+                    <p id="queue_position" class="text-center" style="font-size: 25px;width: 100%;{% if context.job_done %}display: none;{% endif %}">
+                        Vous etes <span id="position">{{ context.job_position }}</span>/<span id="total_jobs">{{ context.nb_jobs }}</span> dans la file
                     </p>
                     <div id="result_div">
-                        <img src="{{ url_for('static', filename="img/giphy.gif") }}" style="width: 350px;" /><br/>
+                        {% if context.job_done %}
+                            <h3>Cette image appartient probablement a la famille des {{ context.result_family }} (Confiance: {{ context.result_confidence }})</h3>
+                        {% else %}
+                            <img src="{{ url_for('static', filename="img/giphy.gif") }}" style="width: 350px;" /><br/>
+                        {% endif %}
                     </div>
                     <p class="text-center" style="font-size: 25px;width: 100%">Votre image</p><br/>
                     <img style="max-width: 350px" src="{{ url_for('display_image', filename=filename) }}" alt="votre image"/>
@@ -51,10 +55,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="{{ url_for('static', filename="js/new-age.js") }}"></script>
-    <script>
-        const job_id = "{{ job_id }}";
-    </script>
-    <script src="{{ url_for('static', filename="js/waiting-screen.js") }}"></script>
+    {% if not context.job_done %}
+        <script>
+            const job_id = "{{ context.job_id }}";
+        </script>
+        <script src="{{ url_for('static', filename="js/waiting-screen.js") }}"></script>
+    {% endif %}
 </body>
 
 </html>
