[FIX] missing link and render of drag & drop

--- a/web/templates/ia.html
+++ b/web/templates/ia.html
@@ -23,9 +23,9 @@
         <div class="container"><a class="navbar-brand js-scroll-trigger" href="/" style="font-size: 35px;font-family: Alatsi, sans-serif;color: var(--warning);">G.R.O.O.T</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler float-right" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#download">Essayez le maintenant</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#features">Fonctionnalite</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/ia">Essayez le maintenant</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#features">Fonctionnalite</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -47,16 +47,16 @@
                         <div class="wrapper">
                             <div class="drop">
                                 <div class="cont">
-                                <i class="fa fa-cloud-upload"></i>
-                                <div class="tit">
-                                    Glissez & deposez
-                                </div>
-                                <div class="desc">
-                                    ou
-                                </div>
-                                <div class="browse">
-                                    parcourir mes fichiers
-                                </div>
+                                    <i class="fa fa-cloud-upload"></i>
+                                    <div class="tit">
+                                        Glissez & deposez
+                                    </div>
+                                    <div class="desc">
+                                        ou
+                                    </div>
+                                    <div class="browse">
+                                        parcourir mes fichiers
+                                    </div>
                                 </div>
                                 <form id="plantForm" action="" method="POST" enctype="multipart/form-data">
                                     <input onchange="$('#plantForm').submit()" id="files" multiple name="file" type="file" />
