--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -78,7 +78,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download"
+              <a class="nav-link js-scroll-trigger" href="/ia"
                 >Essayez le maintenant</a
               >
             </li>
@@ -242,7 +242,7 @@
           <a
             class="btn btn-outline-warning btn-xl js-scroll-trigger"
             role="button"
-            href="#contact"
+            href="/ia"
             >Commencez l'experience!</a
           >
         </div>
