--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -262,13 +262,10 @@
             ></a>
           </li>
           <li class="list-inline-item social-twitter">
-            <a href="#" style="background: rgb(54, 54, 54)"
+            <a
+              href="https://github.com/TeamNameBE/G.R.O.O.T."
+              style="background: rgb(54, 54, 54)"
               ><i class="fa fa-github"></i
-            ></a>
-          </li>
-          <li class="list-inline-item social-twitter">
-            <a href="#" style="background: rgb(114, 137, 217)"
-              ><i class="fab fa-discord"></i
             ></a>
           </li>
         </ul>
